Add PawPalTest.java to test TaskList.java and Parser.java